--- a/src/Products/Products.Service/Products.Service.csproj
+++ b/src/Products/Products.Service/Products.Service.csproj
@@ -6,7 +6,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MediatR" Version="9.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Products.Application\Products.Application.csproj" />
+      <ProjectReference Include="..\Products.Persistence\Products.Persistence.csproj" />
     </ItemGroup>
 
 </Project>
