--- a/src/Products/Products.Persistence/Products.Persistence.csproj
+++ b/src/Products/Products.Persistence/Products.Persistence.csproj
@@ -8,4 +8,9 @@
       <ProjectReference Include="..\Products.Application\Products.Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.12" />
+    </ItemGroup>
+
 </Project>
