--- a/src/Products/Products.Application/Products.Application.csproj
+++ b/src/Products/Products.Application/Products.Application.csproj
@@ -9,6 +9,7 @@
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.3.4" />
       <PackageReference Include="MediatR" Version="9.0.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     </ItemGroup>
 
     <ItemGroup>
