add functionality to create a company

--- a/src/ReferenceArchitecture.Backend/ReferenceArchitecture.Application/ReferenceArchitecture.Application.csproj
+++ b/src/ReferenceArchitecture.Backend/ReferenceArchitecture.Application/ReferenceArchitecture.Application.csproj
@@ -6,4 +6,14 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="10.0.1" />
+      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ReferenceArchitecture.Domain\ReferenceArchitecture.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
